[package]
name = "dancelist"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
description = "A website for listing folk dance events."
repository = "https://github.com/qwandor/dancelist"
keywords = ["folk", "dance", "balfolk", "website"]
categories = ["web-programming"]

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["form", "typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
color-backtrace = "0.7.0"
enum-iterator = "2.1.0"
eyre = "0.6.12"
icalendar = { version = "0.16.13", features = ["parser"] }
jsonwebtoken = "9.3.1"
log = "0.4.27"
octocrab = "0.44.1"
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.37.5", features = ["serialize"] }
regex = "1.11.1"
reqwest = "0.12.15"
rrule = "0.14.0"
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
serde_yaml = "0.8.26"
sha1 = "0.10.6"
stable-eyre = "0.2.2"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.22"
tower-http = { version = "0.6.4", features = ["fs"] }
url = "2.5.4"

[package.metadata.deb]
section = "web"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/dancelist.toml"]
assets = [
	[
		"target/release/dancelist",
		"usr/bin/",
		"755",
	],
	[
		"public/scripts/*",
		"/usr/share/dancelist/scripts/",
		"644",
	],
	[
		"public/stylesheets/*",
		"/usr/share/dancelist/stylesheets/",
		"644",
	],
	[
		"dancelist.example.toml",
		"etc/dancelist.toml",
		"640",
	],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
