[package]
name = "dancelist"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
description = "A website for listing folk dance events."
repository = "https://github.com/qwandor/dancelist"
keywords = ["folk", "dance", "balfolk", "website"]
categories = ["web-programming"]

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.10.2", features = ["form", "typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
color-backtrace = "0.7.1"
enum-iterator = "2.3.0"
eyre = "0.6.12"
fast_qr = { version = "0.13.1", features = ["image"] }
icalendar = { version = "0.17.3", features = ["chrono-tz", "parser"] }
jsonwebtoken = "9.3.1"
log = "0.4.28"
octocrab = "0.46.0"
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
regex = "1.11.3"
reqwest = "0.12.23"
rrule = "0.14.0"
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
serde_yaml = "0.8.26"
sha1 = "0.10.6"
stable-eyre = "0.2.2"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.7"
tower-http = { version = "0.6.6", features = ["fs"] }
url = "2.5.7"

[package.metadata.deb]
section = "web"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/dancelist.toml"]
assets = [
	[
		"target/release/dancelist",
		"usr/bin/",
		"755",
	],
	[
		"public/robots.txt",
		"/usr/share/dancelist/robots.txt",
		"644",
	],
	[
		"public/scripts/*",
		"/usr/share/dancelist/scripts/",
		"644",
	],
	[
		"public/stylesheets/*",
		"/usr/share/dancelist/stylesheets/",
		"644",
	],
	[
		"dancelist.example.toml",
		"etc/dancelist.toml",
		"640",
	],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
