[package]
name = "dancelist"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
description = "A website for listing folk dance events."
repository = "https://github.com/qwandor/dancelist"
keywords = ["folk", "dance", "balfolk", "website"]
categories = ["web-programming"]

[dependencies]
askama = "0.16.0"
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["form", "typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
color-backtrace = "0.7.2"
enum-iterator = "2.3.0"
eyre = "0.6.12"
fast_qr = { version = "0.13.1", features = ["image"] }
hex = "0.4.3"
icalendar = { version = "0.17.10", features = ["chrono-tz", "parser"] }
jsonwebtoken = "10.3.0"
log = "0.4.29"
octocrab = "0.50.0"
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.39.4", features = ["serialize"] }
regex = "1.12.3"
reqwest = "0.13.3"
rrule = "0.14.0"
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_yaml = "0.8.26"
sha1 = "0.11.0"
stable-eyre = "0.2.2"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
tower-http = { version = "0.6.10", features = ["fs"] }
url = "2.5.8"

[package.metadata.deb]
section = "web"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/dancelist.toml"]
assets = [
	[
		"target/release/dancelist",
		"usr/bin/",
		"755",
	],
	[
		"public/robots.txt",
		"/usr/share/dancelist/robots.txt",
		"644",
	],
	[
		"public/scripts/*",
		"/usr/share/dancelist/scripts/",
		"644",
	],
	[
		"public/stylesheets/*",
		"/usr/share/dancelist/stylesheets/",
		"644",
	],
	[
		"dancelist.example.toml",
		"etc/dancelist.toml",
		"640",
	],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
